@@ -4,6 +4,10 @@
 
 2015-06-25  6.9.1-7 Cristy  <quetzlzacatenango@image...>
   * Support BPG image format (respects -quality option).
+  * A bordered transparent image now remains transparent (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=5&t=27937).
+  * The -update option behavior restored (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=27939).
 
 2015-06-13  6.9.1-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.1-6, SVN revision 18945.
